getting_started/test_files/syntax_errors/illegal_print.java
public class Factorial{
    public static void main(String[] a){
    }
}

class Element {
    public boolean Init(){
        int test = v_Age ;       
        System.out.println(int);
    }
}
